# tilesets-cli

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  codeql-analysis.yml  release.yaml  test.yaml  test.yml  unit-test.yaml
cli/: cli.py
cli/commands/: jobs.py  sources.py  sources_get.py  sources_list.py  tilesets.py  tilesets_get.py  tilesets_list.py  tilesets_publish.py
cli/utils/: common.py  errors.py  http.py
mapbox_tilesets/: __init__.py  errors.py  utils.py
mapbox_tilesets/scripts/: cli.py  cli_activity.py  cli_changesets.py  cli_common.py  cli_jobs.py  cli_recipes.py  cli_sources.py  cli_tilesets.py
src/commands/: jobs_get.py  sources.py  sources_get.py  sources_list.py  tilesets_create.py  tilesets_get.py
src/utils/: http.py
tests/: conftest.py  test_cli_activity.py  test_cli_changesets.py  test_cli_create.py  test_cli_delete.py  test_cli_estimate_area.py  test_cli_estimate_cu.py  test_cli_jobs.py  test_cli_list.py  test_cli_publish.py  test_cli_publish_changesets.py  test_cli_sources.py  test_cli_status.py  test_cli_tilejson.py  test_cli_update.py  test_cli_update_recipe.py  test_cli_upload.py  test_cli_validate_recipe.py  test_cli_view_recipe.py  test_file_validator.py  test_session.py  test_utils.py  test_version_documentation.py  utils.py
tests/fixtures/: changeset-payload.json  invalid-changeset-geojson.ldgeojson  invalid.ldgeojson  (+9 more)
tilesets/: __init__.py  cli.py  errors.py  utils.py
(+5 files in other folders)
