[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapbox-tilesets"
version = "2.0.0"
description = "CLI for interacting with and preparing data for the Mapbox Tilesets API"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [{ name = "Mapbox", email = "maps-api-team@mapbox.com" }]
keywords = ["mapbox", "tilesets", "cli", "geojson", "vector tiles"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

dependencies = [
  "click>=8.1",
  "cligj>=0.7",
  "requests>=2.32",
  "requests-toolbelt>=1.0",
  "jsonschema>=4.18,<5",
  "mercantile>=1.1",
  "geojson>=3.0",
  "numpy>=1.23,<2",
]

[project.optional-dependencies]
estimate-area = ["supermercado>=0.2.0"]

[project.scripts]
tilesets = "mapbox_tilesets.scripts.cli:cli"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.setuptools]
packages = ["mapbox_tilesets", "mapbox_tilesets.scripts"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=4",
  "build>=1.2",
  "pre-commit>=3.5",
  "black==22.3.0",
]
